--- a/Client/src/app/net-banking/admin/admin.component.html
+++ b/Client/src/app/net-banking/admin/admin.component.html
@@ -1,30 +1,3 @@
 
 <app-admin-navbar></app-admin-navbar>
-<div class="container">
-
-    <div class="table-responsive">
-
-        <table class="table" *ngIf="Accounts && Accounts.length>0; else alternate">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let a of Accounts">
-                    <td>{{a.customerId}}</td>
-                    <td>{{a.firstName}}</td>
-                    <td>{{a.lastName}}</td>
-                    <td>{{a.aadhaarCardNumber}}</td>
-                    <td>{{a.sourceofincome}}</td>
-                    <td>{{a.status}}</td>
-                    
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<ng-template #alternate>
-    <span>No records found</span>
-</ng-template>
+<router-outlet></router-outlet>
