--- a/Client/src/app/net-banking/admin/admin-navbar/admin-navbar.component.html
+++ b/Client/src/app/net-banking/admin/admin-navbar/admin-navbar.component.html
@@ -19,7 +19,7 @@
              <a class="nav-link " aria-current="page" href="admin/reqaccounts">Requested Accounts</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link " aria-current="page" href="admin/activeaccounts">Active Accounts</a>
+             <a class="nav-link " aria-current="page" href="admin/resaccounts">Active Accounts</a>
            </li>
            <li class="nav-item">
              <a class="nav-link " aria-current="page" href="admin/profile">Profile</a>
