--- a/Client/src/app/net-banking/create-account/create-account.component.html
+++ b/Client/src/app/net-banking/create-account/create-account.component.html
@@ -1,8 +1,8 @@
 <br>
 <div>
-    <h4>Create Account</h4>
+    <h4>Create Account</h4><br>
     <form >
-        <label for="Title"><Title></Title></label> &nbsp;
+        <label for="Title">Title</label> &nbsp;
         <input name="Title" type="text" /><br><br>
       
 
