--- a/Client/src/app/net-banking/user-page/navbar/navbar.component.html
+++ b/Client/src/app/net-banking/user-page/navbar/navbar.component.html
@@ -13,19 +13,19 @@
        <div class="offcanvas-body">
          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
            <li class="nav-item">
-             <a class="nav-link " aria-current="page" href="user">DashBoard</a>
+             <a class="nav-link " aria-current="page" href="user/{{custID}}">DashBoard</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="user/statement">Account Statement</a>
+            <a class="nav-link " aria-current="page" href="user/{{custID}}/statement/{{custID}}">Account Statement</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="user">Account Summary</a>
+            <a class="nav-link " aria-current="page" href="user/{{custID}}/summary/{{custID}}">Account Summary</a>
+          </li>
+          <li   class="nav-item">
+            <a class="nav-link " aria-current="page" href="user/{{custID}}/profile/{{custID}}">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="user/profile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="user/transaction">Fund Transfer</a>
+            <a class="nav-link " aria-current="page" href="user/{{custID}}/transaction/{{custID}}">Fund Transfer</a>
           </li>
            <li class="nav-item">
              <a class="nav-link" href="#">Logout</a>
