--- a/Client/src/app/net-banking/user-page/user-page.component.html
+++ b/Client/src/app/net-banking/user-page/user-page.component.html
@@ -1,4 +1,4 @@
-<div><app-navbar></app-navbar></div>
+<div><app-navbar [custID]="Account?.customerId" ></app-navbar></div>
 <br/>
 <div><router-outlet></router-outlet></div>
 
